<resources>
    <string name="app_name">Inventory Application</string>
    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="product_detail"> Product Detail</string>
    <string name="hint_price">Enter price</string>
    <string name="hint_item_name">Write item name</string>
    <string name="hint_amount">Write the amount</string>
    <string name="hint_size">What Size</string>
    <string name="hint_name_supplier">Write Supplier Name</string>
    <string name="hint_supplier_phone">Write Supplier Phone</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Label for size information in the editor [CHAR LIMIT=30] -->
    <string name="category_size">Size</string>
    <!-- Label for dropdown menu option if the item size is Small [CHAR LIMIT=20] -->
    <string name="size_small">Small</string>

    <!-- Label for dropdown menu option if the item size is Medium [CHAR LIMIT=20] -->
    <string name="size_medium">Medium</string>

    <!-- Label for dropdown menu option if the item size is Large [CHAR LIMIT=20] -->
    <string name="size_large">Large</string>
    <!-- Label for dropdown menu option if the item size is XLarge [CHAR LIMIT=20] -->
    <string name="size_xlarge">XLarge</string>

    <string name="editor_activity_title_new_item">Add a new product</string>

    <string name="name_supplier">Supplier Name</string>

</resources>
